Added smooth scroll

--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
  <meta name="twitter:image" content="https://example.com/og-image.jpg">
 
  <style>
+html {
+scroll-behavior: smooth;
+
+
+}
+
+
  * { 
     margin: 0; 
     padding: 0; 
